WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
289715
REGRESSION (
286448@main
): WKWebView content inset causes content touches to be off inside the web view
https://bugs.webkit.org/show_bug.cgi?id=289715
Summary
REGRESSION (286448@main): WKWebView content inset causes content touches to b...
jfahrenkrug
Reported
2025-03-13 09:57:00 PDT
On iOS 18.4 beta setting a content inset on a WKWebView causes touches inside of the webview to be off by the content inset amount. In other words, when I display an element in the webview and the webview has a top content inset of 75 points, I have to tap 75 points above the actual element I want to tap. This makes any web content basically impossible to use when a content inset is present. A sample app demonstrating the issue can be found here:
https://github.com/karlingen/iOS18.4-Webview-Bug
The issue is not present in iOS 18.3 or 18.2. Thank you for addressing this!
Attachments
Bug demo
(991.83 KB, image/gif)
2025-03-13 09:59 PDT
,
jfahrenkrug
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
jfahrenkrug
Comment 1
2025-03-13 09:59:37 PDT
Created
attachment 474554
[details]
Bug demo
Radar WebKit Bug Importer
Comment 2
2025-03-13 11:31:02 PDT
Comment hidden (obsolete)
<
rdar://problem/146970261
>
Alexey Proskuryakov
Comment 3
2025-03-13 11:32:55 PDT
Thank you for the report! Would it be possible to share the level of end user impact? Are there existing applications that are running into this?
Jordan
Comment 4
2025-03-13 11:54:31 PDT
Hi Alexey, thanks for your response. This is severely impacting basic functionality on our app which has about ~4 million monthly active devices.
Wenson Hsieh
Comment 5
2025-03-14 11:04:23 PDT
This regressed after my change in
https://commits.webkit.org/286448@main
; I'll have a fix out shortly. Thank you for reporting this (and sorry for the breakage!)
Wenson Hsieh
Comment 6
2025-03-14 11:31:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/42493
Jordan
Comment 7
2025-03-14 12:32:54 PDT
Thank you very much! Do you know if this fix will be included in the next iOS 18.4 beta?
Wenson Hsieh
Comment 8
2025-03-14 14:12:54 PDT
rdar://147075945
EWS
Comment 9
2025-03-14 17:30:18 PDT
Committed
292199@main
(ca94e292f231): <
https://commits.webkit.org/292199@main
> Reviewed commits have been landed. Closing PR #42493 and removing active labels.
jfahrenkrug
Comment 10
2025-03-17 01:17:06 PDT
@Wenson Thank you very much for the super quick turnaround on this!
EWS
Comment 11
2025-03-19 09:37:55 PDT
Committed
289651.292@safari-7621-branch
(5a4ffbab132f): <
https://commits.webkit.org/289651.292@safari-7621-branch
> Reviewed commits have been landed. Closing PR #2832 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug