REGRESSION (286448@main): WKWebView content inset causes content touches to be off inside the web view https://bugs.webkit.org/show_bug.cgi?id=289715 rdar://147075945

Reviewed by Abrar Rahman Protyasha.

After the changes in 286448@main, when the web view's scroll view is scrolled to the top with a
nonzero top content inset, touch events end up being offset by exactly the height of the content
inset area that's visible. This happens because the logic in `mapRootViewToViewport` attempts to
map the touch location in root view coordinates into unscrolled root view coordinates by subtracting
the web view origin in root view coordinates from the touch location in the root view. The web
process then translates these unscrolled root view coordinates back into root view coordinates by
adding the main frame scroll position.

The problem with this approach is that, when the user scrolls to the top of the web view with a
content inset, the main frame scroll position reports an offset of `0`, but the web view origin in
root view coordinates accounts for the top content inset (i.e., it will be equal to the visible
height of the top content inset area). This discrepancy between main frame scroll position and web
view origin subsequently breaks the translation logic.

To fix this, we leverage existing logic in `-currentlyVisibleContentInsetsWithScale:obscuredInsets:`
which was added to fix a similar issue (https://webkit.org/b/193494), and adjust for this visible
content inset amount when computing `offsetInRootView`.

* LayoutTests/fast/events/touch/ios/touch-events-with-top-content-inset-expected.txt: Added.
* LayoutTests/fast/events/touch/ios/touch-events-with-top-content-inset.html: Added.

Add a layout test to exercise this fix, by adding a 200px top content inset to the web view, and
then attempting to observe `touchstart` and `touchend` events over a 100px-tall container at the
top of the viewport. Without this fix, we'd be unable to hit-test to this container at all, since
touches are offset by more than the height of the container.

* Source/WebKit/UIProcess/API/ios/WKWebViewIOS.h:
(-[WKWebView _currentlyVisibleContentInsetsWithObscuredInsets:]):
* Source/WebKit/UIProcess/ios/WKTouchEventsGestureRecognizer.mm:
(mapRootViewToViewport):

See above for more details.

Canonical link: https://commits.webkit.org/292199@main